Release version V1.4.0: added new features and bug fixes